disabled drawing code. ported over to BseProbe API.
Sat Jul 17 12:36:35 2004  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstsnifferscope.[hc]: disabled drawing code. ported
        over to BseProbe API.

        * beast-gtk/bsttrackroll.c: set the track-output sorce as scope target.

svn path=/trunk/; revision=2315

--- a/TODO
+++ b/TODO
@@ -1,4 +1,9 @@
 FIXMES:
+- rename bsesnifferscop.* to bsescope.*
+- check sfi_debug_check ("sched") in --debug-list
+- rename gslopmaster to bseenginemaster
+- move ProbeFeatures into bseprobe.idl (requires BseSource as C++ object)
+- remove Reply jobs from engine
 - implement ensure-track-links
 - master bus creation + making the bus master needs to go to undo
 - get rid of sniffers entirely (which we're currently leaking per each track+view combination)
