--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Sat Jul 17 12:36:35 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstsnifferscope.[hc]: disabled drawing code. ported
+	over to BseProbe API.
+
+	* beast-gtk/bsttrackroll.c: set the track-output sorce as scope target.
+
 Wed Jul 14 01:40:50 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstprofiler.c: show thread-id if developer hints are
