--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Sat Jul 17 19:03:33 2004  Tim Janik  <timj@gtk.org>
+
+	* bsesniffer.cc: fix C++ LessThanComparable implementation for sort().
+
 Sat Jul 17 12:40:38 2004  Tim Janik  <timj@gtk.org>
 
 	* bse/bsebus.[hcp]*: fixed track/bus argument type for bse_bus_connect()
