--- a/docs/site-links-synthesis.texi
+++ b/docs/site-links-synthesis.texi
@@ -96,7 +96,15 @@ Selected @uref{http://www.soundonsound.com,,Sound On Sound} Articles:
 	@uref{http://www.soundonsound.com/sos/sep03/articles/synthsecrets.htm,,Part53}
 	@uref{http://www.soundonsound.com/sos/oct03/articles/synthsecrets.htm,,Part54}
 	@uref{http://www.soundonsound.com/sos/nov03/articles/synthsecrets.htm,,Part55}
-	@c @uref{http://www.soundonsound.com/sos/dec03/articles/synthsecrets.htm,,Part56}
+	@uref{http://www.soundonsound.com/sos/dec03/articles/synthsecrets.htm,,Part56}
+@c @item Synth Secrets 2004:
+	@c @uref{http://www.soundonsound.com/sos/jan04/articles/synthsecrets.htm,,Part57}
+	@c @uref{http://www.soundonsound.com/sos/feb04/articles/synthsecrets.htm,,Part58}
+	@c @uref{http://www.soundonsound.com/sos/mar04/articles/synthsecrets.htm,,Part59}
+	@c @uref{http://www.soundonsound.com/sos/apr04/articles/synthsecrets.htm,,Part60}
+	@c @uref{http://www.soundonsound.com/sos/may04/articles/synthsecrets.htm,,Part61}
+	@c @uref{http://www.soundonsound.com/sos/jun04/articles/synthsecrets.htm,,Part62}
+	@c @uref{http://www.soundonsound.com/sos/jul04/articles/synthsecrets.htm,,Part63}
 @end itemize
 
 
