--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,19 @@
+Fri Jul 23 18:39:30 2004  Tim Janik  <timj@gtk.org>
+
+	* bseengine.h:
+	* bseengine.c: CVS copied from gslengine.[hc].
+
+	* bseenginenode.h: CVS copied from gslopnode.h
+
+	* bseenginemaster.h:
+	* bseenginemaster.c: CVS copied from gslmaster.[hc].
+
+	* bseengineschedule.h:
+	* bseengineschedule.c: CVS copied from gslopschedule.[hc].
+
+	* bseengineutils.c:
+	* bseengineutils.h: CVS copied from gsloputil.[hc].
+
 Tue Jul 20 06:33:25 2004  Tim Janik  <timj@gtk.org>
 
 	* bseprobe.idl:
