--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,14 @@
+Fri Jul 23 19:05:23 2004  Tim Janik  <timj@gtk.org>
+
+	* *.[hc]:
+	* Makefile.am: use bseengine*.[hc] instead of gsl*.[hc] files.
+
+	* gslengine.[hc]:
+	* gslopnode.h:
+	* gsloputil.[hc]:
+	* gslopmaster.[hc]:
+	* gslopschedule.[hc]: removed.
+	
 Fri Jul 23 18:39:30 2004  Tim Janik  <timj@gtk.org>
 
 	* bseengine.h:
