--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,7 @@
+Fri Jul 23 19:06:46 2004  Tim Janik  <timj@gtk.org>
+
+	* *.c: include bseengine.h.
+
 Fri Jul  2 01:30:05 2004  Tim Janik  <timj@gtk.org>
 
 	* bsesimpleadsr.c (simple_adsr_process): guard last_trigger updates in
