--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,7 @@
+Fri Jul 23 20:05:53 2004  Tim Janik  <timj@gtk.org>
+
+        * *.h, *.c, *.cc: globally renamed GSL Engine to BSE Engine.
+
 Fri Jul 23 19:06:46 2004  Tim Janik  <timj@gtk.org>
 
 	* *.c: include bseengine.h.
