--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,7 @@
+Sat Jul 24 05:33:58 2004  Tim Janik  <timj@gtk.org>
+
+        * *.[hc]*: fixed if_reject() and if_expect() usage.
+
 Fri Jul 23 20:05:53 2004  Tim Janik  <timj@gtk.org>
 
         * *.h, *.c, *.cc: globally renamed GSL Engine to BSE Engine.
