--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Sat Jul 24 08:20:32 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstsnifferscope.c (scope_probes_notify): request all
+	probe features. re-enabled and adapted scope drawing code.
+
+	* library/scripts/modules2grid.scm (modules2grid):
+	* library/scripts/song-parts-operations.scm (song-parts-operation): use
+	(bse-container-list-children) since ...-list-items is gone now.
+
 Fri Jul 23 20:05:53 2004  Tim Janik  <timj@gtk.org>
 
         * *.h, *.c, *.cc: globally renamed GSL Engine to BSE Engine.
