--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Sat Jul 24 11:40:50 2004  Tim Janik  <timj@gtk.org>
+
+	* bsesniffer.idl:
+	* bsesniffer.cc: removed BseSniffer code.
+
 Sat Jul 24 08:16:14 2004  Tim Janik  <timj@gtk.org>
 
 	* bseengine.[hc]: added n_delay and n_probes arguments to
