--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,9 @@
+Sun Jul 25 16:43:52 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* bsemidireceiver.cc: Properly NULL initialize the module list in the
+	constructor of struct ControlValue.  This fixes the segfaults on AMD64
+	that occur when playing the demosong (and probably others).
+
 Sat Jul 24 19:53:33 2004  Tim Janik  <timj@gtk.org>
 
         * bstsnifferscope.[hc]: fixed up drawing code to show time-scrolling
