natural and not-a-knot interpolating spline implementation with inverse
Fri Jul 30 11:28:02 2004  Tim Janik  <timj@gtk.org>

        * beast-gtk/gxk/gxkspline.h:
        * beast-gtk/gxk/gxkspline.c: natural and not-a-knot interpolating spline
        implementation with inverse lookup (abscissa finder).

        * beast-gtk/gxk/splinetest.c: spline test porgram.

svn path=/trunk/; revision=2345

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 FIXMES:
+- alias id= to name= in radget files
 - delte+undo on tracks kills connections? (busses?)
 - rename bsesnifferscop.* to bsescope.*
 - rename snifferscope to trackscope
