--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Fri Jul 30 11:28:02 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/gxk/gxkspline.h: 
+	* beast-gtk/gxk/gxkspline.c: natural and not-a-knot interpolating spline
+	implementation with inverse lookup (abscissa finder).
+
+	* beast-gtk/gxk/splinetest.c: spline test porgram.
+
 Sat Jul 24 08:20:32 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstsnifferscope.c (scope_probes_notify): request all
