--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-15  Duarte Loreto <happyguy_pt@hotmail.com>
+
+	* pt.po: Fixed typo on the Portuguese translation.
+
 2004-08-13  Duarte Loreto <happyguy_pt@hotmail.com>
 
 	* pt.po: Updated Portuguese translation.
