--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,16 @@
-Sat Jul 31 10:24:27 2004  Tim Janik  <timj@gtk.org>
+Sun Aug 01 11:41:03 2004  Tim Janik  <timj@gtk.org>
 
-	* beast-gtk/gxk/splinetest.c: allow swapping the x and y axis in output
-	by specifying negative spline variants. added variant.
+	* beast-gtk/gxk/splinetest.c: minor cleanups, more testing.
 
-	* beast-gtk/gxk/gxkspline.c (gxk_spline_new): fixed up spline allocation
-	size. made NAN checks for first and last point derivatives independant
-	to support one ended natural splines.
+	* beast-gtk/gxk/gxkspline.[hc]: added gxk_spline_copy(), some fixups.
+
+	* beast-gtk/gxk/gxkradget.c: register GtkViewport as radget type.
+
+	* beast-gtk/gxk/gxkdialog.c: use g_get_application_name() as GUI
+	program name.
+
+	* beast-gtk/gxk/gxkauxwidgets.[hc]: support patching up widgets, so
+	that the base color looks like the background color or vice versa.
 
 Fri Jul 30 11:28:02 2004  Tim Janik  <timj@gtk.org>
 
