implemented construct arg handling.
Mon Aug 16 16:49:14 2004  Tim Janik  <timj@gtk.org>

        * beast-gtk/gxk/gxkradget.[hc]:
        implemented construct arg handling.

        * beast-gtk/gxk/gxkradgetfactory.c:
        * beast-gtk/gxk/gxkauxwidgets.c: adapted GxkRadgetType functions.

svn path=/trunk/; revision=2360

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 FIXMES:
+- add more menu tooltips
 - mixer icon
 - get rid of FIXMEs in beast-gtk/testgui.c
 - seqid changed notification *only* works for non-source children of BseSong
