--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Mon Aug 16 16:49:14 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/gxk/gxkradget.[hc]:
+	implemented construct arg handling.
+
+	* beast-gtk/gxk/gxkradgetfactory.c:
+	* beast-gtk/gxk/gxkauxwidgets.c: adapted GxkRadgetType functions.
+
 Mon Aug 16 13:03:45 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/gxk/gxkradget.c: alias id= to name= in radget definitions.
