--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-17  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Updated Spanish translation.
+
 2004-08-15  Duarte Loreto <happyguy_pt@hotmail.com>
 
 	* pt.po: Fixed typo on the Portuguese translation.
